@@ -1,3 +1,12 @@
+1999-04-11  Tom Tromey  <tromey@cygnus.com>
+
+	Fix for confh.test:
+	* automake.in (configure_input_files): New global.
+	(scan_configure): Set it.
+	(handle_configure): Use configure_input_files when determining
+	which subdirs have a Makefile.am.  Fixes confh.test.
+	(handle_configure): Only recognize acconfig.h in top srcdir.
+
 1999-04-10  Tom Tromey  <tromey@cygnus.com>
 
 	* depend2.am (%.o): Use `$(*D)/$(*F)', not just `$(*F)'.
